# loom

./: .gitignore  .markdownlintignore  .work  CLAUDE.md  CLAUDE.md.template  CLAUDE.template.md  ISSUES.md  LICENSE  README.md  install.sh  test-hooks.sh
loom/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
loom/.githooks/: pre-commit  pre-push
loom/hooks/: post-tool-use.sh  pre-compact.sh  session-end.sh  session-start.sh  stop.sh  subagent-stop.sh
loom/resources/: Dockerfile.tmpl  claude-settings.json  entrypoint.sh  firewall.sh
loom/resources/hooks/: loom-stop.sh
loom/src/: claude.rs  codex.rs  language.rs  lib.rs  main.rs  remote_control.rs  utils.rs  validation.rs
loom/src/checkpoints/: mod.rs  types.rs
loom/src/cli/: dispatch.rs  mod.rs  types.rs  types_memory.rs  types_stage.rs
loom/src/commands/: attach.rs  checkpoint.rs  clean.rs  diagnose.rs  fact.rs  graph.rs  hooks.rs  init.rs  knowledge.rs  learn.rs  map.rs  memory.rs  merge.rs  mod.rs  repair.rs  resume.rs  run.rs  sessions.rs  signal.rs  skill_index.rs  stage.rs  status.rs  stop.rs  verify.rs  worktree_cmd.rs
loom/src/completions/: dynamic.rs  generator.rs  install.rs  mod.rs
loom/src/daemon/: mod.rs  protocol.rs  server.rs
loom/src/diagnosis/: guidance.rs  mod.rs  signal.rs
loom/src/fs/: checkpoints.rs  facts.rs  knowledge.rs  learnings.rs  locking.rs  memory.rs  mod.rs  permissions.rs  plan_lifecycle.rs  safe_fs.rs  safe_write.rs  session_files.rs  stage_files.rs  stage_loading.rs  task_state.rs  verifications.rs  work_dir.rs  work_integrity.rs  worktree_files.rs
loom/src/git/: branch.rs  cleanup.rs  hooks.rs  merge.rs  mod.rs  repository.rs  runner.rs  worktree.rs
loom/src/handoff/: detector.rs  generator.rs  git_handoff.rs  mod.rs  schema.rs
loom/src/hooks/: config.rs  events.rs  generator.rs  mod.rs  tests.rs
loom/src/map/: analyzer.rs  detectors.rs  mod.rs
loom/src/models/: constants.rs  dispute.rs  failure.rs  handoff.rs  keys.rs  (+8 more)
loom/tests/: adjudication_e2e.rs  completion_flow.rs  container_adversarial.rs  container_smoke.rs  failure_resume.rs  log_format_test.rs  phantom_merge.rs  plan_amendment_integration.rs  stage_completion.rs  stage_transitions.rs
(+783 files in other folders)
