[package]
name = "loom"
version = "0.1.0"
edition = "2021"
description = "Agent orchestration CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
colored = "3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
semver = "1"
zip = "7"
dirs = "6"
minisign-verify = "0.2.4"
sha2 = "0.10.9"
hex = "0.4.3"
serde_yaml = "0.9.34"
uuid = { version = "1.19.0", features = ["v4"] }
toml = "0.9.10"
serde_json = "1.0.149"
clap_complete = "4"
shell-escape = "0.1.5"
wait-timeout = "0.2.1"
nix = { version = "0.31", features = ["process", "fs", "signal"], default-features = false }
libc = "0.2.180"
ctrlc = "3.5.1"
which = "8.0.0"
regex = "1.12.2"
fs2 = "0.4"
ratatui = "0.30"
crossterm = "0.29"
tracing = "0.1"
glob = "0.3.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.24.0"

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.24.0"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
